[gd_scene load_steps=7 format=3 uid="uid://bbdm0dpwrypvb"]

[ext_resource type="Script" path="res://RayTest/particles/lightening.gd" id="1_8oi2d"]
[ext_resource type="Texture2D" uid="uid://b8dddb683iixe" path="res://RayTest/sprites/Lightening.png" id="2_ocrv3"]
[ext_resource type="Texture2D" uid="uid://dk0b6lqd5ppl6" path="res://RayTest/sprites/Lightening2.png" id="3_4x4tb"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_14fja"]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 2
particles_anim_loop = true

[sub_resource type="Gradient" id="Gradient_3x1u7"]
offsets = PackedFloat32Array(0, 0.843023, 1)
colors = PackedColorArray(0, 0.368627, 1, 0.509804, 0, 0, 1, 0.756863, 1, 1, 1, 0)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_mnjuk"]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 2
particles_anim_loop = true

[node name="lightening" type="Node2D"]
script = ExtResource("1_8oi2d")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_14fja")
position = Vector2(1, 0)
emitting = false
amount = 10
lifetime = 0.5
one_shot = true
speed_scale = 2.0
explosiveness = 0.5
texture = ExtResource("2_ocrv3")
direction = Vector2(0, 1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 15.38
initial_velocity_max = 35.89
scale_amount_min = 0.5
color_ramp = SubResource("Gradient_3x1u7")
anim_offset_max = 1.0

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_mnjuk")
position = Vector2(50, 0)
emitting = false
amount = 10
lifetime = 0.5
one_shot = true
speed_scale = 2.0
explosiveness = 0.5
texture = ExtResource("3_4x4tb")
direction = Vector2(0, -1)
spread = 5.54
gravity = Vector2(0, 0)
initial_velocity_min = 15.38
initial_velocity_max = 35.89
scale_amount_min = 0.5
color_ramp = SubResource("Gradient_3x1u7")
anim_offset_max = 1.0

[node name="CPUParticles2D3" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_mnjuk")
position = Vector2(-50, 0)
emitting = false
amount = 10
lifetime = 0.5
one_shot = true
speed_scale = 2.0
explosiveness = 0.5
texture = ExtResource("3_4x4tb")
direction = Vector2(0, -1)
spread = 5.54
gravity = Vector2(0, 0)
initial_velocity_min = 15.38
initial_velocity_max = 35.89
scale_amount_min = 0.5
color_ramp = SubResource("Gradient_3x1u7")
anim_offset_max = 1.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
